@@ -5,7 +5,7 @@
 <style>
 @font-face {
     font-family: 'myfont';
-    src: local(Courier); /* Use monospace font */
+    src: local(Courier), local('Courier New'); /* Use monospace font */
     unicode-range: U+062-60;
 }
 </style>
