@@ -11,7 +11,7 @@
 /* Test 0: Download sucess */
 @font-face {
     font-family:myfont_0;
-    src: local('Courier');
+    src: local('Courier'), local('Courier New');
 }
 @font-face {
     font-family:myfont_0;
@@ -22,7 +22,7 @@
 /* Test 1: Download error */
 @font-face {
     font-family:myfont_1;
-    src: local('Courier');
+    src: local('Courier'), local('Courier New');
 }
 @font-face {
     font-family:myfont_1;
@@ -33,7 +33,7 @@
 /* Test 2: Download error followed by success */
 @font-face {
     font-family:myfont_2;
-    src: local('Courier');
+    src: local('Courier'), local('Courier New');
 }
 @font-face {
     font-family:myfont_2;
@@ -44,7 +44,7 @@
 /* Test 3: Download error followed by existing local font */
 @font-face {
     font-family:myfont_3;
-    src: local('Courier');
+    src: local('Courier'), local('Courier New');
 }
 @font-face {
     font-family:myfont_3;
